log
Sat, Mar 29, 2025 10:53:16 AM: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Sat, Mar 29, 2025 11:12:12 AM: 
 list.c | 18 +++++++++++-------
 1 file changed, 11 insertions(+), 7 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:44:5: error: expected ';' before '}' token
     }
     ^
Compilation failed
ba1165b
Sat, Mar 29, 2025 11:12:45 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
ec86fd7
Sat, Mar 29, 2025 11:15:35 AM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 25/70
0699afd
Sat, Mar 29, 2025 11:21:44 AM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
f850d16
Sat, Mar 29, 2025 11:24:48 AM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
e301084
Sat, Mar 29, 2025 11:44:58 AM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
c694567
Sat, Mar 29, 2025 11:46:36 AM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  10|2
total_score: 45/70
80aa619
Sat, Mar 29, 2025 12:07:57 PM: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  10|2
total_score: 45/70
4968e7f
Sat, Mar 29, 2025 12:08:27 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
baac270
Sat, Mar 29, 2025 12:08:54 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
e7447e6
Sat, Mar 29, 2025 12:22:58 PM: 
 list.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:124:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     else if (eliminar = list->tail) {
     ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1647438
Sat, Mar 29, 2025 12:24:26 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
12248b8
Sat, Mar 29, 2025 12:25:14 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
c522174
Sat, Mar 29, 2025 12:26:22 PM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|1
total_score: 55/70
b640cc1
Sat, Mar 29, 2025 12:27:35 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
1efd45b
